@@ -1,5 +1,5 @@
 {
-  "count": 285,
+  "count": 296,
   "uniques": 1,
   "views": [
     {
@@ -55,6 +55,11 @@
     {
       "timestamp": "2022-05-16T00:00:00Z",
       "count": 19,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-17T00:00:00Z",
+      "count": 11,
       "uniques": 1
     }
   ]
